Projects: Reduced the font size of multiple items. Project items that are outside the viewing bounderies are no longer visible.
Bugs: Still need to fix the no results found item

TODO: Add slideshow to top of the page. Add a way to scroll through pages of projects. Add method to hide excessive project text.

--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -14,12 +14,13 @@ body {
     background-color: #555555; /* 555555 */
     color: #EEEEEE;
     margin: 0;
+    font-size: 16px;
+
 }
 
 p {
     margin-left: auto;
     margin-right: auto;
-    font-size: 18px;
 }
 
 div.main-text {
@@ -50,7 +51,6 @@ div.projects ul li{
     padding: 0;
     margin: 0px 0px 16px 0px;
     overflow: hidden;
-    font-size: 18px;
 }
 
 p.projects-tags {
@@ -58,7 +58,6 @@ p.projects-tags {
 }
 
 div.projects ul li p {
-    font-size: inherit;
     text-align: left;
     margin: 8px;
     padding: 0;
@@ -66,7 +65,7 @@ div.projects ul li p {
 
 
 h1.projects-title {
-    font-size: 38px;
+    font-size: 30px;
     text-align: left;
     margin: 16px 8px 8px 8px;
     padding: 0;
@@ -75,8 +74,8 @@ h1.projects-title {
 
 img.projects-image {
     float: left;
-    width: 30%;
-    margin: 16px 32px 0px 8px;
+    width: 22%;
+    margin: 16px 32px 16px 8px;
 }
 
 #no-results {
@@ -98,15 +97,15 @@ div.checkboxes {
 }
 
 #tags {
-    padding: 16px;
+    padding: 12px;
     margin: 0px 0px 32px 0px;
     background-color: rgba(0, 0, 0, 0.7);
 }
 
 h1.box-title {
     margin: 0px;
-    padding: 16px 8px;
-    font-size: 22px;
+    padding: 12px 8px;
+    font-size: 18px;
     text-align: left;
     color: white;
 
